@@ -52,6 +52,8 @@
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
  * 14-Nov-2007 : Updated setFixedDomainAxisSpaceForSubplots() method (DG);
  * 27-Mar-2008 : Add documentation for getDataRange() method (DG);
+ * 31-Mar-2008 : Updated getSubplots() to return EMPTY_LIST for null 
+ *               subplots, as suggested by Richard West (DG);
  * 
  */
  
@@ -225,12 +227,18 @@ public class CombinedRangeCategoryPlot extends CategoryPlot
     }
 
     /**
-     * Returns the list of subplots.
+     * Returns the list of subplots.  The returned list may be empty, but is
+     * never <code>null</code>.
      *
-     * @return The list (unmodifiable).
+     * @return An unmodifiable list of subplots.
      */
     public List getSubplots() {
-        return Collections.unmodifiableList(this.subplots);
+    	if (this.subplots != null) {
+            return Collections.unmodifiableList(this.subplots);
+    	}
+    	else {
+    		return Collections.EMPTY_LIST;
+    	}
     }
 
     /**
