@@ -89,6 +89,8 @@
  * 27-Nov-2007 : Modified setFixedDomainAxisSpaceForSubplots() so as not to
  *               trigger change events in subplots (DG);
  * 27-Mar-2008 : Add documentation for getDataRange() method (DG);
+ * 31-Mar-2008 : Updated getSubplots() to return EMPTY_LIST for null 
+ *               subplots, as suggested by Richard West (DG);
  * 
  */
 
@@ -261,12 +263,18 @@ public class CombinedRangeXYPlot extends XYPlot
     }
 
     /**
-     * Returns a list of the subplots.
+     * Returns the list of subplots.  The returned list may be empty, but is
+     * never <code>null</code>.
      *
-     * @return The list (unmodifiable).
+     * @return An unmodifiable list of subplots.
      */
     public List getSubplots() {
-        return Collections.unmodifiableList(this.subplots);
+    	if (this.subplots != null) {
+            return Collections.unmodifiableList(this.subplots);
+    	}
+    	else {
+    		return Collections.EMPTY_LIST;
+    	}
     }
 
     /**
